//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Staff {
  id String [pk]
  name String [not null]
  mobileNumber String [unique, not null]
  isTrashed Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  addedDoctor Doctor [not null]
  addedSchedule Schedule [not null]
  addedProcedure Procedure [not null]
  addedAppointment Appointment [not null]
  addedBill Bill [not null]
  addedPayment Payment [not null]
  addedPartPayment PartPayment [not null]
  addedAttendance Attendance [not null]
  addedExpenditureType ExpenditureType [not null]
  addedExpenditure Expenditure [not null]
  addedExpenditureDocs ExpenditureDocs [not null]
  addedAppointmentTests AppointmentTests [not null]
}

Table Doctor {
  id String [pk]
  name String [not null]
  specialization TREATMENT [not null, default: 'DENTAL']
  isTrashed Boolean [not null, default: false]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  schedules Schedule [not null]
  appointment Appointment [not null]
  attendance Attendance [not null]
}

Table Schedule {
  id String [pk]
  day DAY [not null, default: 'MONDAY']
  slot SLOT [not null, default: 'MORNING']
  doctorId String [not null]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  doctor Doctor [not null]
}

Table Attendance {
  id String [pk]
  doctorID String [not null]
  dateOfAttendance DateTime [not null]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  doctor Doctor [not null]
  staff Staff [not null]
}

Table Procedure {
  id String [pk]
  name String [not null]
  treatment TREATMENT [not null, default: 'DENTAL']
  rate Int [not null]
  doctorRate Int [not null]
  officeRate Int [not null]
  technicianRate Int [not null]
  variableRate Boolean [not null, default: false]
  isDoctorRatePercentageValue Boolean [not null, default: false]
  isOfficeRatePercentageValue Boolean [not null, default: false]
  isTechnicianRatePercentageValue Boolean [not null, default: false]
  isTrashed Boolean [not null, default: false]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  bills Bill [not null]
}

Table Appointment {
  id String [pk]
  dateOfAppointment DateTime [not null]
  name String [not null]
  mobile String [not null]
  isPartPaymentEnabled Boolean [not null, default: false]
  doctorID String [not null]
  slot SLOT [not null, default: 'MORNING']
  problemType TREATMENT [not null, default: 'DENTAL']
  description String [default: '']
  address String [default: '']
  isArrived Boolean [not null, default: false]
  isBilled Boolean [not null, default: false]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  doctor Doctor [not null]
  staff Staff [not null]
  payment Payment
  bills Bill [not null]
  partPayment PartPayment [not null]
  appointmentTests AppointmentTests [not null]
}

Table AppointmentTests {
  id String [pk]
  docSrc String [not null]
  description String [not null]
  appointmentID String [not null]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  appointment Appointment [not null]
  staff Staff [not null]
}

Table Bill {
  id String [pk]
  procedureID String [not null]
  appointmentID String
  finalValue Int [not null]
  quantity Int [not null]
  paymentID String
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  appointment Appointment
  procedure Procedure [not null]
  payment Payment
}

Table Payment {
  id String [pk]
  appointmentID String [unique, not null]
  isPartPaymentEnabled Boolean [not null, default: false]
  total Int [not null]
  dateOfPayment DateTime [not null]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  bills Bill [not null]
  appointment Appointment [not null]
  staff Staff [not null]
  partPayment PartPayment [not null]
}

Table PartPayment {
  id String [pk]
  paymentID String [not null]
  appointmentID String [not null]
  amount Int [not null]
  dateOfPayment DateTime [not null]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  payment Payment [not null]
  appointment Appointment [not null]
}

Table ExpenditureType {
  id String [pk]
  name String [not null]
  amount Int [not null]
  addedBy String [not null]
  isTrashed Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  expenditure Expenditure [not null]
}

Table Expenditure {
  id String [pk]
  amount Int [not null]
  modeOfPayment MODE_OF_PAYMENT [not null, default: 'CASH']
  name String [not null]
  mobileNumber String [not null]
  chequeNo String [default: '']
  bankTransactionID String [default: '']
  upiID String [default: '']
  issueDate DateTime [not null]
  description String [default: '']
  addedBy String [not null]
  expenditureTypeId String [not null]
  createdAt DateTime [default: `now()`, not null]
  staff Staff [not null]
  expenditureType ExpenditureType [not null]
  expenditureDocs ExpenditureDocs [not null]
}

Table ExpenditureDocs {
  id String [pk]
  docSrc String [not null]
  description String [not null]
  expenditureID String [not null]
  addedBy String [not null]
  createdAt DateTime [default: `now()`, not null]
  expediture Expenditure [not null]
  staff Staff [not null]
}

Enum DAY {
  MONDAY
  TUESDAY
  WEDNESDAY
  THURSDAY
  FRIDAY
  SATURDAY
  SUNDAY
}

Enum SLOT {
  MORNING
  EVENING
}

Enum TREATMENT {
  DENTAL
  OPTICS
}

Enum MODE_OF_PAYMENT {
  CASH
  CHEQUE
  UPI
  BANK_TRANSFER
}

Ref: Doctor.addedBy > Staff.id

Ref: Schedule.addedBy > Staff.id

Ref: Schedule.doctorId > Doctor.id

Ref: Attendance.doctorID > Doctor.id

Ref: Attendance.addedBy > Staff.id

Ref: Procedure.addedBy > Staff.id

Ref: Appointment.doctorID > Doctor.id

Ref: Appointment.addedBy > Staff.id

Ref: AppointmentTests.appointmentID > Appointment.id [delete: Cascade]

Ref: AppointmentTests.addedBy > Staff.id

Ref: Bill.addedBy > Staff.id

Ref: Bill.appointmentID > Appointment.id

Ref: Bill.procedureID > Procedure.id

Ref: Bill.paymentID > Payment.id

Ref: Payment.appointmentID - Appointment.id

Ref: Payment.addedBy > Staff.id

Ref: PartPayment.addedBy > Staff.id

Ref: PartPayment.paymentID > Payment.id

Ref: PartPayment.appointmentID > Appointment.id

Ref: ExpenditureType.addedBy > Staff.id

Ref: Expenditure.addedBy > Staff.id

Ref: Expenditure.expenditureTypeId > ExpenditureType.id

Ref: ExpenditureDocs.expenditureID > Expenditure.id [delete: Cascade]

Ref: ExpenditureDocs.addedBy > Staff.id